--- a/py.html
+++ b/py.html
@@ -1,9 +1,9 @@
-<h1>Welcome to my webpage</h1>
+<html>
+    <head>
+        <title>My webpage</title>
+    </head>
 
-<p>This is some useful info I think you should know:</p>
-<ul>
-  <li>Roses are red</li>
-  <li>Violets are blue</li>
-  <li>I like writing HTML</li>
-  <li>I hope you will too</li>
-</ul>
+    <body>
+        Some text in the body
+    </body>
+</html>
